# dreambench_plus

./: .gitignore  README.md  pyproject.toml
dreambench_plus/: benchmarking.py  constants.py  dreambench_plus_dataset.py  eval_clip_and_dino.py  eval_concept_preservation.py  eval_prompt_following.py  generate_images.py  generate_models.py  krippendorff_analysis.py  merge_data.py  pearson.py
dreambench_plus/few_shot/: blip_diffusion.json  dreambooth_lora_sdxl.json  dreambooth_sd.json  emu2.json  ip_adapter_giant.json  ip_adapter_huge_plus.json
dreambench_plus/metrics/: clip_score.py  dino_score.py
dreambench_plus/prompts/: gpt_prompt_style_w_cot.txt  gpt_prompt_style_wo_scoring_criteria.txt  gpt_prompt_style_wo_scoring_range.txt  gpt_prompt_subject_full.txt  gpt_prompt_subject_w_cot.txt  gpt_prompt_subject_w_human_prior.txt  gpt_prompt_text_full.txt  gpt_prompt_text_wo_cot.txt  gpt_prompt_text_wo_scoring_criteria.txt  user_prompt_style_full.txt  user_prompt_style_w_cot.txt  user_prompt_style_w_human_prior.txt  user_prompt_style_wo_scoring_criteria.txt  user_prompt_style_wo_scoring_range.txt  user_prompt_subject_full.txt  user_prompt_subject_w_cot.txt  user_prompt_subject_w_human_prior.txt  user_prompt_subject_wo_scoring_criteria.txt  user_prompt_subject_wo_scoring_range.txt  user_prompt_text_full.txt  user_prompt_text_wo_cot.txt  user_prompt_text_wo_scoring_criteria.txt  user_prompt_text_wo_scoring_range.txt
dreambench_plus/training_scripts/: textual_inversion.py  train_dreambooth.py  train_dreambooth_lora.py  train_dreambooth_lora_sdxl.py
(+15 files in other folders)
